--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "zzcls",
-  "version": "2.0.0",
-  "description": "[![HknxQs.png](https://s4.ax1x.com/2022/02/01/HknxQs.png)](https://zh.wikipedia.org/zh-cn/User:PexEric/%E9%83%91%E5%B7%9E%E4%B8%AD%E5%9B%BD%E8%AF%AD%E5%AD%A6%E6%A0%A1)",
+  "name": "zzfls",
+  "version": "3.0.0",
+  "description": "none",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/PexEric/ZZCLS.git"
+    "url": "git+https://github.com/SaberQing/SaberQing.github.io.git"
   },
   "author": "SuberQing and Muamu925",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/SaberQing/zzfls/issues"
+    "url": "https://https://github.com/SaberQing/SaberQing.github.io/issues"
   },
-  "homepage": "https://github.com/SaberQing/zzfls#readme"
+  "homepage": "https://github.com/SaberQing/SaberQing.github.io#readme"
 }
